----------------------------------------------------------------------------

SimGrid (3.24.1) NOT RELEASED YET (v3.25 expected December 22. 2029, 04:19 UTC)

General:
- Upgrade documented Java dependency to Java 8 (earlier versions don't work).

S4U:
- Actor: Merge signals on_migration_start/end into on_host_change
- Actor: Rename migrate() into set_host()
- Disk: Allow users to get the read and write nominal bandwidth values
- Exec: Implement wait_for(timeout)
- Io: Implement wait_for(timeout)

XML:
- Parse errors now raise a simgrid::ParseError that you may want to catch.

Kernel:
- In simgrid::kernel::resource::Model, the methods next_occuring_event*() have
  been renamed to fix a spelling error. As usual, the previous definitions are
  kept with a deprecation warning. However, to avoid runtime errors, it is now
  forbidden to override these deprecated methods in a derived class. Please use
  the new names immediately if you need to override them.

XBT:
- Remove unused parameter 'free_ctn' for xbt_dict_set() and xbt_dict_set_ext().
- Drop unused functions for dicts and dynars: xbt_dict_cursor_get_elm,
  xbt_dict_get, xbt_dict_get_elm, xbt_dict_get_ext, xbt_dict_get_key,
  xbt_dict_remove, xbt_dict_reset, xbt_dynar_compare, xbt_dynar_dump,
  xbt_dynar_foreach_ptr, xbt_dynar_free_data, xbt_dynar_free_voidp,
  xbt_dynar_init, xbt_dynar_insert_at_as, xbt_dynar_merge,
  xbt_dynar_remove_n_at, xbt_dynar_replace, xbt_dynar_search, xbt_dynar_set.
- New module: random, providing classical random numbers generators.

SMPI:
- New option : "smpi/auto-shared-malloc-thresh" which sets a value for
  allocations' size above which they are considered "shared" by default (as if
  they were performed through SMPI_SHARED_MALLOC macros).
  Default = 0 = disabled feature.
  Note : malloc, calloc and free are now overriden by smpicc/cxx by default.
  This can cause some troubles if codes are already overriding these. If this